test/functional/failtests/opOverloadDuplicate.txt
TypeError: Cannot redeclare operator overload for int + int
6 | }
7 | operator (int:x + int:y) int {
  | ^ (7:1)
8 |     return x * y;

